--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <!-- Meta tags Obrigatórias -->
@@ -7,11 +7,30 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+      <link rel="stylesheet" href="css/prim.css" />
     <title>Olá, mundo!</title>
   </head>
   <body>
-    <h1>Olá, mundo!</h1>
+
+      <div class="row" id="menu">
+
+          <div class="col-md-3">
+              <h1>OIA</h1>
+          </div>
+          <div class="col-md-9">
+              <nav>
+                  <ul>
+                      <li><a href="#">Primeiro</a></li>
+                      <li>/</li>
+                      <li><a href="#">Segundo</a></li>
+                      <li>/</li>
+                      <li><a href="#">Terceiro</a></li>
+                  </ul>
+              </nav>
+          </div>
+
+      </div>
+
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
