--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
 
       <div class="row" id="menu">
 
+
+          <div class="col-md-3">
+              <nav>
+                  <ul>
+                      <li></li>
+                  </ul>
+              </nav>
+          </div>
+
           <div class="col-md-3">
               <h1>OIA</h1>
           </div>
-          <div class="col-md-9">
+          <div class="col-md-6">
               <nav>
                   <ul>
                       <li><a href="#">Primeiro</a></li>
