--- a/nova.html
+++ b/nova.html
@@ -18,33 +18,23 @@
 </head>
 
 <body>
-    <div>
-        <div class="header-blue">
-            <nav class="navbar navbar-light navbar-expand-md navigation-clean-search">
-                <div class="container-fluid"><a class="navbar-brand" href="#">Guaiá</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse"
-                        id="navcol-1">
-                        <ul class="nav navbar-nav">
-                            <li class="nav-item" role="presentation"><a class="nav-link" href="nova.html">Endereço</a></li>
-                        </ul>
-                        <form class="form-inline mr-auto" target="_self"></form><span class="navbar-text"> <a class="login" href="#">Log In</a></span><a class="btn btn-light action-button" role="button" href="#">Sign Up</a></div>
-                </div>
-            </nav>
-            <div class="container hero">
-                <div class="row">
-                    <div class="col-12 col-lg-6 col-xl-5 offset-xl-1">
-                        <h1>Teste para o novo site.</h1>
-                        <p>Mauris egestas tellus non ex condimentum, ac ullamcorper sapien dictum. Nam consequat neque quis sapien viverra convallis. In non tempus lorem. </p><button class="btn btn-light btn-lg action-button" type="button">Learn More</button></div>
-                    <div
-                        class="col-md-5 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block phone-holder">
-                        <div class="iphone-mockup"><img class="device" src="assets/img/iphone.svg">
-                            <div class="screen"></div>
-                        </div>
-                </div>
-            </div>
+    <div class="simple-slider">
+        <div class="swiper-container">
+            <div class="swiper-pagination"></div>
         </div>
     </div>
-    </div>
+    <nav class="navbar navbar-light navbar-expand-md bg-success">
+        <div class="container-fluid"><a class="navbar-brand text-monospace text-capitalize text-white" href="index.html" target="_blank" title="asdf">Guaiá</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navcol-1">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item" role="presentation"><a class="nav-link active text-white" href="index.html">Home</a></li>
+                    <li class="nav-item" role="presentation"></li>
+                </ul>
+        </div>
+        </div>
+    </nav><iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCHv9lvxxhdULMRbP2mlg8-vMPoULXjarE&amp;q=Paris%2C+France&amp;zoom=11" width="100%" height="400"></iframe>
+    <div class="features-blue"></div>
     <div class="footer-basic">
         <footer>
             <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
